how model calculate scores

--- a/scikit learn/scikit_learn_part2.ipynb
+++ b/scikit learn/scikit_learn_part2.ipynb
@@ -320,7 +320,7 @@
     "# FIT THE MODEL\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\"\"\"does not work until you encode and then transform the column having string values into float\"\"\"\n",
-    "# RFR = RandomForestRegressor() d\n",
+    "# RFR = RandomForestRegressor()\n",
     "# RFR.fit(x_train,y_train)\n",
     "# RFR.score(x_test,y_test)\n"
    ]
