--- a/scikit learn/1A. sk_MLmodel_lifeCycle.ipynb
+++ b/scikit learn/1A. sk_MLmodel_lifeCycle.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "74291b6e-32fa-4f81-9fe7-092f2ad9f9a0",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "bf141562-a10b-480a-81e7-727097553fac",
    "metadata": {},
    "outputs": [],
@@ -399,13 +399,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "2e2d56a3-d742-46b6-a2bb-9fdb0c174f11",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=0.3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "32ecc09f-abd3-4f33-9dc8-8937c5ffe1e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age           int64\n",
+       "sex           int64\n",
+       "cp            int64\n",
+       "trestbps      int64\n",
+       "chol          int64\n",
+       "fbs           int64\n",
+       "restecg       int64\n",
+       "thalach       int64\n",
+       "exang         int64\n",
+       "oldpeak     float64\n",
+       "slope         int64\n",
+       "ca            int64\n",
+       "thal          int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.dtypes"
    ]
   },
   {
