--- a/scikit learn/4b Classification Problem Eval.ipynb
+++ b/scikit learn/4b Classification Problem Eval.ipynb
@@ -335,7 +335,7 @@
    "metadata": {},
    "source": [
     "# EVAL - METRICS\n",
-    "# 2- Area Under Curve (ROC)\n",
+    "# 2- Area Under Curve (ROC) for a Binary Classification Problem\n",
     "## Heart Dataset(heart disease prediction)"
    ]
   },
@@ -1261,7 +1261,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "id": "8d7cf74b-9a56-4d45-9de3-9b0f1865f4bf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1682,7 +1684,8 @@
     "### Collection of multiple metrics\n",
     "#### -1 Recall\n",
     "#### -2 Precision\n",
-    "#### -3 Imbalance"
+    "#### -3 Imbalance\n",
+    "#### -4 F1"
    ]
   },
   {
