tuning parameters manually

--- a/scikit learn/5 Tuning_Hyperparameters.ipynb
+++ b/scikit learn/5 Tuning_Hyperparameters.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "742241fc-08fe-4447-9892-48d197ef65fd",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "da7cfba4-06d7-48ee-8ef2-36718d97becb",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "aaa1cfa0-9e32-4b20-83ca-61a7e62945a9",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "37123391-f202-4e38-a1b3-891f4262a6e7",
    "metadata": {},
    "outputs": [],
@@ -121,31 +121,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "38be8382-c0dd-4608-a63f-c1cbc356ccae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "rfc_model = RandomForestClassifier()\n",
-    "rfc_model.fit(X_train,Y_train)\n",
-    "# baseline(first predictions)\n",
-    "y_predicted = rfc_model.predict(X_valid)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "8ab0b67e-ed53-4e58-b061-b7b786c38b11",
+   "id": "8617f44f-5640-47a5-8c8c-6b36849ab5a7",
    "metadata": {},
    "source": [
-    "# Manually Tuning Hyperparameter"
+    "# Baseline/Initial Results without Tuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "3f95cf61-2cb2-4d23-9b2f-380e7f0a085a",
+   "execution_count": 11,
+   "id": "38be8382-c0dd-4608-a63f-c1cbc356ccae",
    "metadata": {},
    "outputs": [
     {
@@ -153,39 +139,61 @@
      "output_type": "stream",
      "text": [
       "Accuracy:0.76\n",
-      "precision:0.77\n",
-      "recall:0.8\n",
-      "f1_score:0.78\n"
+      "precision:0.75\n",
+      "recall:0.84\n",
+      "f1_score:0.79\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "np.random.seed(5)\n",
+    "rfc_model = RandomForestClassifier()\n",
+    "rfc_model.fit(X_train,Y_train)\n",
+    "# baseline(first predictions)\n",
+    "y_predicted = rfc_model.predict(X_valid)\n",
     "result = evaluate_metrics(Y_valid,y_predicted)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ab0b67e-ed53-4e58-b061-b7b786c38b11",
+   "metadata": {},
+   "source": [
+    "# 1-Manually Tuning Hyperparameter"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "8dbb1edc-4449-47c3-bf65-2bd307d88444",
+   "execution_count": 27,
+   "id": "3f95cf61-2cb2-4d23-9b2f-380e7f0a085a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'accuracy': 0.7608695652173914,\n",
-       " 'precision': 0.7692307692307693,\n",
-       " 'recall': 0.8,\n",
-       " 'f1': 0.7843137254901961}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:0.8\n",
+      "precision:0.77\n",
+      "recall:0.92\n",
+      "f1_score:0.84\n"
+     ]
     }
    ],
    "source": [
-    "result"
+    "np.random.seed(5)\n",
+    "rfc_model2 = RandomForestClassifier(n_estimators=7,max_depth=9) # By default n_estimators = 100\n",
+    "rfc_model2.fit(X_train,Y_train)\n",
+    "# baseline(first predictions)\n",
+    "y_predicted = rfc_model2.predict(X_valid)\n",
+    "result = evaluate_metrics(Y_valid,y_predicted)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ed898b1-8ed4-464d-a686-35a32224b5e1",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
